# Komega

./: .gitignore  Makefile.in  README.md  README_ja.md  aclocal.m4  config.h.in  configure  configure.ac
.github/: python-tests.yml
.github/workflows/: ci.yml  python-tests.yml  quick-test.yml  test-matrix.yml
app/sample/from_file/: namelist.def
app/sample/from_file/output/: ResVec.dat0
app/src/: Makefile.in  dyn_mod.F90  ham_prod.F90  lobpcg_mod.F90  shiftk.F90  shiftk_io.F90  shiftk_vals.F90
c_komega/: .gitignore  Doxyfile  README.md  github_actions_workflow.yml
c_komega/include/: komega.h  komega_bicg.h  komega_cg_c.h  komega_cg_r.h  komega_cocg.h  komega_math.h  komega_parameter.h  komega_vals_r.h
c_komega/src/: komega_bicg.c  komega_cg_c.c  komega_cg_r.c  komega_cocg.c  komega_math.c  komega_parameter.c  komega_vals_r.c
c_komega/tests/: Makefile  komega_fortran_mock.c  komega_fortran_wrapper.c  komega_fortran_wrapper.h  run_c_tests.sh  test_c_solve_cc.c  test_c_solve_cr.c  test_c_solve_rc.c  test_c_solve_rr.c  test_comparison.c  test_detailed.c  test_fortran_compatibility.c  test_fortran_wrapper.c  test_komega.c  test_simple.c
config/: missing
doc/software/en/: shiftk_contact_en.rst  shiftk_copy_en.rst  shiftk_format_en.rst
doc/software/figs/: flow_en.ai  flow_ja.ai
doc/software/ja/: index.rst  shiftk_contact_ja.rst  shiftk_copy_ja.rst  shiftk_flow_ja.rst  shiftk_format_ja.rst  shiftk_overview_ja.rst  shiftk_tutorial_ja.rst
misc/: make_realm_from_complexm.py  output.mtx  test.mtx
python_komega/: GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_SIMPLE.yml  README.md  __init__.py  komega.py  komega_bicg.py  komega_cg_c.py  komega_cg_r.py  komega_cocg.py  komega_math.py  komega_parameter.py  komega_vals_c.py  komega_vals_r.py  komega_vecs_c.py  komega_vecs_r.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_basic.py  test_detailed_compatibility.py  test_fortran_compatibility.py  test_function_calls.py  test_function_calls_simple.py  test_github_actions.py  test_komega.py  test_komega_simple.py  test_working.py
src/: Makefile.am  Makefile.in  komega_bicg.F90  komega_cg_c.F90  komega_cg_r.F90  komega_cocg.F90  komega_math.F90  komega_shifted_qmr_sym.F90  komega_shifted_qmr_sym_b.F90  komega_vals.F90
src/.libs/: libkomega.0.dylib  libkomega.dylib
test/: Makefile.am  Makefile.in  README.md  run_tests.sh  solve_cc.F90  solve_rc.F90  solve_rc_qmr1.F90  solve_rc_qmr2.F90
